# payloadcms-client

./: .gitignore  README.md  clean_payloadcms.py  example_auth.py  example_cleanup.py  pyproject.toml  test_bologna_upload.py
src/payloadcms_client/: __init__.py  articles.py  file_parser.py  html_to_lexical.py  payload_client.py
tests/: conftest.py  test_authentication.py  test_categories.py  test_cleanup.py  test_file_parser.py  test_payload_client.py  test_upload_articles.py
