[project]
name = "payloadcms-client"
version = "0.1.0"
description = "Utilities for uploading blog articles to Payload CMS via the REST API"
authors = [
  { name = "Payload CMS Client" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.31"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "python-dotenv>=1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
